@@ -11,6 +11,7 @@ S3method("dimnames<-",listenv)
 S3method("length<-",listenv)
 S3method("names<-",listenv)
 S3method(all.equal,listenv)
+S3method(aperm,listenv)
 S3method(as.list,listenv)
 S3method(as.listenv,default)
 S3method(as.listenv,environment)
