@@ -5,6 +5,8 @@ Version: 0.8.0-9000 [2021-02-14]
 
 NEW FEATURES:
 
+ * Add aperm() for list-environment arrays.
+
  * parse_env_subset() gained argument 'is_variable' to control whether or not
    the inferred element named should be checked if it is a valid variable name
    or not.
